adjust sub-plugin pom

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <!-- 跳过测试 -->
         <skipTests>true</skipTests>
         <maven.test.skip>true</maven.test.skip>
-        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <!--        <maven.javadoc.skip>true</maven.javadoc.skip>-->
         <hutool-all.version>5.7.21</hutool-all.version>
     </properties>
     <dependencies>
@@ -85,6 +85,10 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <!--                            <additionalparam>-Xdoclint:none</additionalparam>-->
+                            <additionalOptions>-Xdoclint:none</additionalOptions>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
@@ -187,6 +191,17 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>sonatype-nexus-staging</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
