--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Jpom-site"]
-    path = docs/Jpom-site
-    url = https://gitee.com/keepbx/Jpom-site.git
+[submodule "docs/Jpom-site"]
+	path = docs/Jpom-site
+	url = https://gitee.com/keepbx/Jpom-site.git
