Upload coverage to Codecov

--- a/.github/workflows/package-testing.yml
+++ b/.github/workflows/package-testing.yml
@@ -22,7 +22,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: cd web-vue && npm i && npm run build
+          cache-dependency-path: './web-vue/package-lock.json'
+      - run: npm ci
+        working-directory: './web-vue'
+      - run: npm run build
+        working-directory: './web-vue'
+      #- run: cd web-vue && npm i && npm run build
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
