--- a/.github/workflows/package-testing.yml
+++ b/.github/workflows/package-testing.yml
@@ -35,7 +35,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package
+        run: mvn -B package && mvn cobertura:cobertura
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
