--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
+        run: bash <(curl -s https://codecov.io/bash)
