--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,7 +12,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven cobertura
+        run: mvn cobertura:cobertura
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
       - run: bash <(curl -s https://codecov.io/bash)
