Upload coverage to Codecov

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven cobertura
-        run: mvn cobertura:cobertura
+        run: mvn cobertura:cobertura -Pcobertura
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
       - run: bash <(curl -s https://codecov.io/bash)
