--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,25 @@
             <id>install-plugin-profile</id>
         </profile>
         <profile>
+            <id>cobertura</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-maven-plugin</artifactId>
+                        <version>2.7</version>
+                        <configuration>
+                            <formats>
+                                <format>html</format>
+                                <format>xml</format>
+                            </formats>
+                            <check/>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release-plugin-profile</id>
             <distributionManagement>
                 <snapshotRepository>
