--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>agent</artifactId>
     <version>2.8.14</version>
-    <name>Jpom 插件端</name>
+    <name>Jpom Agent</name>
     <properties>
         <start-class>io.jpom.JpomAgentApplication</start-class>
     </properties>
