--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>Jpom 服务端</name>
+    <name>Jpom Server</name>
     <artifactId>server</artifactId>
     <version>2.8.14</version>
     <properties>
