optimal opt log get request body

--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -37,5 +37,6 @@ preload:
 request:
   trimAll: true
   parameterXss: false
+  copyInputStream: true
 #在线编辑格式
 #fileFormat: txt|yml|conf|properties|ini
