--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
                         <exclude>**/*.md</exclude>
                         <exclude>**/*.xml</exclude>
                         <exclude>**/*.sql</exclude>
+                        <exclude>**/*.txt</exclude>
                         <exclude>.editorconfig</exclude>
                         <exclude>.gitignore</exclude>
                     </excludes>
