--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Package Testing
+name: build
 
 on:
   push:
@@ -21,12 +21,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          #cache: 'npm'
-          #cache-dependency-path: './web-vue/package-lock.json'
-      #- run: npm ci
-      #  working-directory: './web-vue'
-      #- run: npm run build
-      #  working-directory: './web-vue'
       - run: cd web-vue && npm i && npm run build
       - name: Set up JDK 8
         uses: actions/setup-java@v2
@@ -36,8 +30,3 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package
-        #file: ./zhuzhu-project/target/site/jacoco/jacoco.xml
-#        run: |
-#          docker buildx create --use
-#          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:2.8.15 -f ./modules/server/DockerfileRelease --push .
-#          docker buildx build --platform linux/amd64,linux/arm64 -t jpomdocker/jpom:latest -f ./modules/server/DockerfileRelease --push .
