--- a/modules/server/src/main/resources/application-local.yml
+++ b/modules/server/src/main/resources/application-local.yml
@@ -1,4 +1,3 @@
-
 netty:
   port: 8888
 server:
@@ -17,3 +16,4 @@ spring:
 #  subTitle: "测试"
 #  name: "ccsfsdfdsf"
 #  loginTitle: dsfasdf
+#  logoFile: https://www.surely.cool/surely-vue-logo.png
