--- a/modules/server/DockerfileRelease
+++ b/modules/server/DockerfileRelease
@@ -33,6 +33,10 @@ ENV jpom.path ${JPOM_DATA_PATH}
 
 WORKDIR $JPOM_HOME
 
+# 时区
+ENV TZ Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 RUN mkdir -p $JPOM_HOME && \
     curl -LfSo $JPOM_HOME/$JPOM_PKG https://jpom-releases.oss-cn-hangzhou.aliyuncs.com/$JPOM_PKG && \
     tar -zxvf $JPOM_HOME/$JPOM_PKG -C $JPOM_HOME && \
