--- a/modules/server/Dockerfile
+++ b/modules/server/Dockerfile
@@ -56,6 +56,10 @@ WORKDIR $JPOM_HOME
 ARG DEPENDENCY=/target/dependency
 COPY --from=builder ${DEPENDENCY}/modules/server/target/${JPOM_PKG} ${JPOM_HOME}
 
+# 时区
+ENV TZ Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 VOLUME $JPOM_HOME
 EXPOSE 2122
 
