feat(add) 新增禁用登录图形验证码配置属性

--- a/modules/server/src/main/resources/application-local.yml
+++ b/modules/server/src/main/resources/application-local.yml
@@ -12,8 +12,9 @@ spring:
       # 是否开启 web 访问数据库（url: http://${ip}:${port}/h2-console）
       enabled: true
 #
-#jpom:
+jpom:
 #  subTitle: "测试"
 #  name: "ccsfsdfdsf"
 #  loginTitle: dsfasdf
 #  logoFile: https://www.surely.cool/surely-vue-logo.png
+#  disabledCaptcha: true
